Closed
Bug 450698
Opened 16 years ago
Closed 16 years ago
The second argument of nsParseNewMailState::AppendMsgFromFile should be PRUint32.
Categories
(MailNews Core :: Filters, defect)
MailNews Core
Filters
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.9.1a2
People
(Reporter: hiro, Assigned: hiro)
References
Details
(Keywords: verified1.8.1.17)
Attachments
(2 files)
1.21 KB,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
2.19 KB,
patch
|
Bienvenu
:
review+
dmosedale
:
approval1.8.1.17+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.15) Gecko/20080702 Ubuntu/8.04 (hardy) Firefox/2.0.0.15 Kazehakase/0.5.4
Build Identifier:
The second argument of nsParseNewMailState::AppendMsgFromFile should be PRUint32.
This causes user data loss.
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
Assignee | ||
Comment 1•16 years ago
|
||
Attachment #333868 -
Flags: review?(bienvenu)
Assignee | ||
Comment 2•16 years ago
|
||
Attachment #333869 -
Flags: review?(bienvenu)
Assignee | ||
Updated•16 years ago
|
Attachment #333868 -
Attachment description: Patch for trune. → Patch for trunk.
Assignee | ||
Comment 3•16 years ago
|
||
(In reply to comment #1)
> Created an attachment (id=333868) [details]
> Patch for trune.
I meant trunk. :-)
Comment 4•16 years ago
|
||
Comment on attachment 333868 [details] [diff] [review]
[checked in] Patch for trunk.
looks good, thanks for the patch
Attachment #333868 -
Flags: superreview+
Attachment #333868 -
Flags: review?(bienvenu)
Attachment #333868 -
Flags: review+
Assignee | ||
Comment 5•16 years ago
|
||
David, could you please review also the patch for stable? I suspect some people in BUG 321371 suffering by this issue.
Assignee | ||
Comment 6•16 years ago
|
||
Comment on attachment 333869 [details] [diff] [review]
Patch for stable.
This patch raises stability and robustness.
Attachment #333869 -
Flags: approval1.8.1.17?
Assignee | ||
Updated•16 years ago
|
Keywords: checkin-needed
Updated•16 years ago
|
Assignee: nobody → poincare
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 7•16 years ago
|
||
Comment on attachment 333868 [details] [diff] [review]
[checked in] Patch for trunk.
Checked in, changeset id: 142:b35225196fb0
Attachment #333868 -
Attachment description: Patch for trunk. → [checked in] Patch for trunk.
Updated•16 years ago
|
Keywords: checkin-needed
Target Milestone: --- → mozilla1.9.1a2
Comment 8•16 years ago
|
||
This is now fixed on trunk, therefore marking as fixed (as per normal process), the approval request will still be picked up for branch.
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Assignee | ||
Comment 9•16 years ago
|
||
Mark, thank you for your kindly instruction. I completely understand check-in process now.
David, thank you for your hard-working efforts!
Comment 10•16 years ago
|
||
Comment on attachment 333869 [details] [diff] [review]
Patch for stable.
thx for the patch
Attachment #333869 -
Flags: review?(bienvenu) → review+
Updated•16 years ago
|
Attachment #333869 -
Flags: approval1.8.1.17? → approval1.8.1.17+
Updated•16 years ago
|
Keywords: checkin-needed
Assignee | ||
Updated•16 years ago
|
Whiteboard: [checkin-needed: 1.8 branch]
Comment 11•16 years ago
|
||
mailnews/local/src/nsParseMailbox.cpp 1.258.2.19
mailnews/local/src/nsParseMailbox.h 1.80.2.8
Keywords: checkin-needed → fixed1.8.1.17
Whiteboard: [checkin-needed: 1.8 branch]
http://mxr.mozilla.org/mozilla1.8/source/mailnews/local/src/nsParseMailbox.cpp#2162:
2162 nsresult nsParseNewMailState::AppendMsgFromFile(nsIOFileStream *fileStream,
2163 PRUint32 offset, PRUint32 length,
2164 nsFileSpec &destFileSpec)
http://mxr.mozilla.org/mozilla1.8/source/mailnews/local/src/nsParseMailbox.h#258:
258 nsresult AppendMsgFromFile(nsIOFileStream *fileStream, PRUint32 offset,
259 PRUint32 length, nsFileSpec &destFileSpec);
Verified FIXED via code inspection; replacing fixed1.8.1.17 keyword with verified1.8.1.7.
Keywords: fixed1.8.1.17 → verified1.8.1.17
Verified FIXED on trunk:
http://mxr.mozilla.org/comm-central/source/mailnews/local/src/nsParseMailbox.cpp#2204
2204 nsresult nsParseNewMailState::AppendMsgFromFile(nsIInputStream *fileStream,
2205 PRUint32 offset, PRUint32 length,
2206 nsILocalFile *destFile)
http://mxr.mozilla.org/comm-central/source/mailnews/local/src/nsParseMailbox.h#252
252 nsresult AppendMsgFromFile(nsIInputStream *fileStream, PRUint32 offset,
253 PRUint32 length, nsILocalFile *destFile);
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•