Bug 450698 The second argument of nsParseNewMailState::AppendMsgFromFile should be PRUint32. r/sr=bienvenu